--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,10 @@
 quarkus.quartz.clustered=true 
 quarkus.quartz.store-type=jdbc-cmt 
 quarkus.quartz.misfire-policy.task-job=ignore-misfire-policy 
+quarkus.scheduler.enabled=true
+quarkus.quartz.start-mode=forced
 
-# Datasource configuration.
+#Datasource configuration.
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=quarkus_test
 quarkus.datasource.password=quarkus_test
@@ -15,16 +17,22 @@ quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=no-file
 
 # flyway configuration
-quarkus.flyway.connect-retries=10
-quarkus.flyway.table=flyway_quarkus_history
-quarkus.flyway.migrate-at-start=true
-quarkus.flyway.baseline-on-migrate=true
-quarkus.flyway.baseline-version=1.0
-quarkus.flyway.baseline-description=Quartz
-flyway.cleanDisabled=false
+#quarkus.flyway.connect-retries=10
+#quarkus.flyway.table=flyway_quarkus_history
+#quarkus.flyway.migrate-at-start=true
+#quarkus.flyway.baseline-on-migrate=true
+#quarkus.flyway.baseline-version=1.0
+#quarkus.flyway.baseline-description=Quartz
+#flyway.cleanOnValidationError=true
+#flyway.cleanDisabled=true
 
-quarkus.scheduler.enabled=true
-quarkus.quartz.start-mode=forced
+# Liquibase minimal config properties
+quarkus.liquibase.migrate-at-start=true
 
 quarkus.native.enable-https-url-handler=true
+org.quartz.jobStore.isClustered = false
 
+#org.acme.rest.client.ExtensionsService/mp-rest/url=https://stage.code.quarkus.io/api
+
+org.acme.quartz.client.ExtensionsService/mp-rest/url=https://finnhub.io/api/v1
+#org.acme.quartz.client.ExtensionsService/mp-rest/scope=javax.inject.Singleton
